-issue#1559: CLI Output Issues due to over escaping
-issue#1560: Warning that escapeshellarg() is escaping a null
-issue#1574: User templates are not correctly being applied
-issue#1602: PHP ERROR: Call to undefined function api_data_source_cache_crc_update()
-issue#1609: Remote pollers update 'stats_poller' on main poller
-issue: Move Graph removal function to Graph API
-issue: Fix issue with display_custom_error_message() causing problem with system error message handling
-issue: Graph List View was not fully responsive
-issue: Typo in Dutch translations when an error occurred while downgrading
-feature#122: Support a Site Branch Type
-feature#973: Obtain users email and full name from ldap 
-feature#1347: Update automation logging to work better
-feature#1142: Add Site dropdown to the Graphs and Data Source pages
-feature#1395: Ensure messages have each new line keep the same prefix in cacti_log()
-feature#1399: Allow 'requires' to include version against a plugin
-feature#1400: User settings should have checkbox to enable overriding of global settings
-feature#1422: Automatically select the next unused data input field when clicking add on data input method
-feature#1505: Allow Device Edit from Graphs page
-feature#1527: Update Fontawesome from 4.7 to 5.0.10
-feature#1580: Support Drag & Drop for Report Items
-feature#1581: Allow Mass Adding of Graphs to Reports
-feature#1584: Allow theme selection when installing
-feature#1593: Allow External links to auto refresh
-feature: Make Graph and Data Source suggested naming more efficient
-feature: Make tree editing responive
-feature: Add support for DDERIVE and DCOUNTER to Cacti
-feature: Add Timezone support for Remote Data Collectors
-feature: Add One Minute Sampling to the default Data Source Profiles
-feature: Allow Top tabs to be Glyphs or Text or both
-feature: Update JavaScript library c3.js to version 0.5.3
-feature: Update JavaScript library jquery.tablesorter.js to version 2.30.1