@@ -24,6 +24,7 @@ Cacti CHANGELOG
 -issue#1574: User templates are not correctly being applied
 -issue#1602: PHP ERROR: Call to undefined function api_data_source_cache_crc_update()
 -issue#1609: Remote pollers update 'stats_poller' on main poller
+-issue#1617: Editing a data query results in missing $header variable
 -issue: Move Graph removal function to Graph API
 -issue: Fix issue with display_custom_error_message() causing problem with system error message handling
 -issue: Graph List View was not fully responsive
